# template-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  cspell.json  environment.yml  pyproject.toml  vercel.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: mkdocs.yml
docs/src/: examples.md  index.md
notebooks/: example.ipynb
